# fantasy-valorant

./: Cargo.toml
src/: main.rs
src/routing/: api.rs  pages.rs
src/routing/pages/: leagues.rs
