[package]
name = "fantasy-valorant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
clap = { version = "4.4.11", features = ["derive"] }
leptos = "0.5.4"

